List Student with Not validated curriculum